# DataPlotly

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.html  README.md  README.txt  REQUIREMENTS_TESTING.txt  __init__.py  codice_vario.py  data_plotly.py  data_plotly_dialog.py  data_plotly_dialog_back.py  data_plotly_plot.py  metadata.txt  pb_tool.cfg  plot_web_view.py  plugin_upload.py  publiccode.yml  pylintrc  pyproject.toml  resources.py  resources.qrc  setup.cfg  utils.py
.docker/: docker-compose.yml  run-tests.sh
.github/: test_plugin.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test_plugin.yaml  tests.yml  transifex.yml
.tx/: config
DataPlotly/: __init__.py  data_plotly.py  data_plotly_dialog.py  data_plotly_plot.py  metadata.txt  server.py  test_suite.py  utils.py
DataPlotly/core/: core_utils.py  plot_expressions.py  plot_factory.py  plot_settings.py
DataPlotly/gui/: add_new_dock_dlg.py  dock.py  gui_utils.py  layout_item_gui.py  plot_settings_widget.py  remove_dock_dlg.py
DataPlotly/i18n/: DataPlotly_af.qm  DataPlotly_af.ts  DataPlotly_en.ts  DataPlotly_es.qm  DataPlotly_es.ts  DataPlotly_fr.qm  DataPlotly_fr.ts  DataPlotly_it.qm  DataPlotly_it.ts  DataPlotly_nl.qm  DataPlotly_nl.ts  DataPlotly_sv.qm  DataPlotly_sv.ts
DataPlotly/jsscripts/: polyfill.min.js
DataPlotly/layouts/: layout_utils.py  plot_layout_item.py
DataPlotly/processing/: barplot.py  boxplot.py  dataplotly_algorithms.py  dataplotly_barplot.py  dataplotly_generic_plot.py  dataplotly_provider.py  dataplotly_scatterplot.py  histogram.py  scatterplot.py  scatterplot_3d.py  utils.py
DataPlotly/test/: __init__.py  processing_scatter.html  qgis_interface.py  test_data_plotly_dialog.py  test_dock_manager.py  test_guiutils.py  test_init.py  test_layer.dbf  test_plot_factory.py  test_plot_settings.py  test_processing.py  test_project_without_state.qgs  test_qgis_environment.py  test_resources.py  test_translations.py  utilities.py
DataPlotly/ui/: add_dock_dlg.ui  dataplotly_dockwidget_base.ui  remove_dock_dlg.ui
help/: Makefile  replace_script.sh
help/source/: 2dhistogram.rst  bar.rst  basic_usage.rst  box.rst  conf.py  contour.rst  from_console.rst  histogram.rst  index.rst  installation.rst  intro.rst  pie.rst  polar.rst  scatter.rst  (+4 more)
i18n/: DataPlotly_en.qm  DataPlotly_en.ts  DataPlotly_es.ts  DataPlotly_fr.qm  DataPlotly_fr.ts  DataPlotly_it.qm  DataPlotly_it.ts  DataPlotly_nl.qm  DataPlotly_nl.ts  DataPlotly_sv.qm  DataPlotly_sv.ts  qgis_it.ts
jsscripts/: plotly.min.js
plots/: bar_dialog.py  scatter3d_dialog.py  scatter3d_plot.py  utils.py
processing/: dataplotly_algorithms.py  dataplotly_provider.py
requirements/: dev.txt  lint.txt  packaging.txt  tests.txt
scripts/: compile-strings.sh  run-env-linux.sh  update-strings.sh
test/: qgis_interface.py  test_data_plotly_dialog.py  test_init.py  test_qgis_environment.py  test_resources.py  test_translations.py  utilities.py
tests/: .gitignore  __init__.py  conftest.py  pytest.ini  scatterplot.json  test_data_plotly_dialog.py  test_dock_manager.py  test_guiutils.py  test_init.py  test_layer.geojson  test_layer.shp  test_plot_factory.py  test_plot_settings.py  test_processing.py  test_qgis_environment.py  test_resources.py  utilities.py
ui/: Bar.ui  data_plotly_dialog_base.ui  dataplotly_dockwidget_base.ui
(+185 files in other folders)
